third_party/rust/paste/tests/ui/env-suffix.stderr
error: expected string literal
 --> $DIR/env-suffix.rs:2:15
  |
2 |     fn [<env!("VAR"suffix)>]() {}
  |               ^^^^^^^^^^^
