third_party/rust/paste/tests/ui/env-suffix.rs
paste::item! {
    fn [<env!("VAR"suffix)>]() {}
}

fn main() {}
